<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtAboutTitle"
            android:text="@string/about_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/snooze_app"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txtAboutDescription"
            android:layout_marginTop="16dp"
            android:text="@string/about_description"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtVersionAbout"
            android:layout_marginTop="24dp"
            android:text="@string/build_version_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtBuildDateAbout"
            android:layout_marginTop="8dp"
            android:text="@string/build_date_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnWebsiteAbout"
            android:layout_marginTop="24dp"
            android:text="@string/menu_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCloseAbout"
            android:layout_marginTop="12dp"
            android:text="@string/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
